--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/dlist.css" rel="stylesheet" />
     <link href="css/hview.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="third_party/crypto.min.js"></script>
